<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/orange"
        android:gravity="bottom"
        android:padding="20dp">

    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/outline_directions_bike_24" android:contentDescription="@string/todo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traveling"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="24sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wwwtravelingcom"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="14sp"/>


</LinearLayout>